--- a/admin.html
+++ b/admin.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>OTP</title>
-  <style>
-     body {
+    <head>
+        <title>Blue Star Mothers of Maricopa</title>
+        <style>
+             body {
         font-family: sans-serif;
         font-size: 16px;
         line-height: 1.5em;
@@ -40,7 +40,8 @@
     }
 
     .submit-button-container {
-        flex: 1;
+        margin: 0 auto;
+        margin-top: 1em;
         display: flex;
         justify-content: center;
     }
@@ -72,30 +73,20 @@
         flex-basis: 50%;
         padding: 10px;
     }
-  </style>
-</head>
-<link rel="stylesheet" href="index.css">
-<body>
-  
-  <div class="container">
+        </style>
+    </head>
+    <link rel="stylesheet" href="index.css">
+    <body class="container">
+        <h1>Blue Star Mothers of Maricopa</h1>
 
-    <h1>Blue Star Mothers of Maricopa</h1>
-
-    <form id="login-form" action="/submit-form" method="post">
-
-        <div class="row">
-            <div class="col-md-6">
-                <input type="email" name="email" placeholder="Enter your email address">
-            </div>
-
-            <div class="col-md-6">
-                <button type="submit" value="Submit" class="button">Get OTP</button>
-            </div>
-        </div>
-
-    </form>
-
-  </div>
-  
-</body>
+        <div class="requests">
+            <h2>Requests</h2>
+            <ul id="requests-list"></ul>
+          </div>
+          <div class="inventory">
+            <h2>Inventory</h2>
+            <ul id="inventory-list"></ul>
+          </div>
+          
+        </body>
 </html>
