--- a/index.html
+++ b/index.html
@@ -101,7 +101,12 @@
 
                 <div class="col-md-6">
                     <label for="gender">Gender:</label>
-                    <input type="text" name="gender" id="gender" placeholder="Enter your gender" required>
+                    <select name="gender" id="gender" required>
+                        <option value="" disabled selected>Select Gender</option>
+                        <option value="Female">Female</option>
+                        <option value="Male">Male</option>
+                        <option value="Other">Other</option>
+                    </select>
                 </div>
             </div>
 
@@ -114,13 +119,14 @@
                 <div class="col-md-6">
                     <label for="branch">Select your branch:</label>
                     <select name="branch" id="branch">
+                        <option value="" disabled selected>Select Branch</option>
+                        <option value="Airforce">Air Force</option>
                         <option value="Army">Army</option>
+                        <option value="Coastguard">Coast Guard</option>
+                        <option value="Marine">Marines</option>
                         <option value="Navy">Navy</option>
-                        <option value="Airforce">Air</option>
-
-                    <option value="Marine">Marine</option>
-                    <option value="Coastguard">Coastguard</option>
-                </select>
+                        <option value="SpaceForce">Space Force</option>
+                    </select>
             </div>
 
             <div class="submit-button-container">
